Bug 264588 - Plasma crashed after closing a media player (Amarok) [NowPlaying::findPlayer, NowPlaying::playerRemoved]
Summary: Plasma crashed after closing a media player (Amarok) [NowPlaying::findPlayer,...
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-nowplaying (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 265804 273054 277761 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-01-28 08:23 UTC by karaluh
Modified: 2011-07-23 13:47 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description karaluh 2011-01-28 08:23:00 UTC
Application: plasma-desktop (0.4)
KDE Platform Version: 4.6.00 (4.6.0)
Qt Version: 4.7.0
Operating System: Linux 2.6.35-25-generic i686
Distribution: Ubuntu 10.10

-- Information about the crash:
- What I was doing when the application crashed:
I clicked "Lock screen" on the Lock screen/shutdown applett.

-- Backtrace:
Application: Plasma Desktop Shell (plasma-desktop), signal: Segmentation fault
[Current thread is 1 (Thread 0xb7821720 (LWP 2583))]

Thread 3 (Thread 0xb511bb70 (LWP 2585)):
#0  0x01348dda in __i686.get_pc_thunk.bx () from /usr/lib/libQtCore.so.4
#1  0x013c3209 in QElapsedTimer::isMonotonic () at tools/qelapsedtimer_unix.cpp:70
#2  0x013c34a2 in do_gettime () at tools/qelapsedtimer_unix.cpp:103
#3  qt_gettime () at tools/qelapsedtimer_unix.cpp:119
#4  0x0149a6e5 in QTimerInfoList::updateCurrentTime (this=0x906cd14) at kernel/qeventdispatcher_unix.cpp:339
#5  0x0149a72a in QTimerInfoList::timerWait (this=0x906cd14, tm=...) at kernel/qeventdispatcher_unix.cpp:442
#6  0x014987a8 in timerSourcePrepareHelper (src=<value optimized out>, timeout=0xb511b0ac) at kernel/qeventdispatcher_glib.cpp:136
#7  0x0149883d in timerSourcePrepare (source=0xb511afc8, timeout=0xb511b028) at kernel/qeventdispatcher_glib.cpp:169
#8  0x03731e6a in g_main_context_prepare () from /lib/libglib-2.0.so.0
#9  0x03732279 in ?? () from /lib/libglib-2.0.so.0
#10 0x03732848 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#11 0x0149859f in QEventDispatcherGlib::processEvents (this=0x9039ab8, flags=...) at kernel/qeventdispatcher_glib.cpp:417
#12 0x01468609 in QEventLoop::processEvents (this=0xb511b280, flags=) at kernel/qeventloop.cpp:149
#13 0x01468a8a in QEventLoop::exec (this=0xb511b280, flags=...) at kernel/qeventloop.cpp:201
#14 0x01364b7e in QThread::exec (this=0x9045bd0) at thread/qthread.cpp:490
#15 0x0144735b in QInotifyFileSystemWatcherEngine::run (this=0x9045bd0) at io/qfilesystemwatcher_inotify.cpp:248
#16 0x01367df9 in QThreadPrivate::start (arg=0x9045bd0) at thread/qthread_unix.cpp:266
#17 0x036cecc9 in start_thread (arg=0xb511bb70) at pthread_create.c:304
#18 0x001e069e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 2 (Thread 0xae6b3b70 (LWP 2630)):
#0  0x006d0416 in __kernel_vsyscall ()
#1  0x036d34dc in pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/i386/i686/../i486/pthread_cond_wait.S:169
#2  0x001edd9d in __pthread_cond_wait (cond=0x1828290, mutex=0x1828278) at forward.c:139
#3  0x01724877 in QTWTF::TCMalloc_PageHeap::scavengerThread (this=0x18231a0) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:2359
#4  0x017248c1 in QTWTF::TCMalloc_PageHeap::runScavengerThread (context=0x18231a0) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:1464
#5  0x036cecc9 in start_thread (arg=0xae6b3b70) at pthread_create.c:304
#6  0x001e069e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 1 (Thread 0xb7821720 (LWP 2583)):
[KCrash Handler]
#7  0x00000018 in ?? ()
#8  0x07ab4de2 in ?? () from /usr/lib/kde4/plasma_applet_nowplaying.so
#9  0x07ab52d3 in ?? () from /usr/lib/kde4/plasma_applet_nowplaying.so
#10 0x07ab92d5 in ?? () from /usr/lib/kde4/plasma_applet_nowplaying.so
#11 0x0146f8ca in QMetaObject::metacall (object=0x8f86010, cl=150495276, idx=150495248, argv=0x9c10028) at kernel/qmetaobject.cpp:237
#12 0x014826ad in QMetaObject::activate (sender=0x8fe39d0, m=0x604b44, local_signal_index=1, argv=0x8fa42b8) at kernel/qobject.cpp:3280
#13 0x00439e33 in Plasma::DataEngine::sourceRemoved (this=0x8fe39d0, _t1=...) at ./dataengine.moc:198
#14 0x0043bd10 in Plasma::DataEngine::removeSource (this=0x8fe39d0, source=...) at ../../plasma/dataengine.cpp:324
#15 0x04c263fc in NowPlayingEngine::removePlayer (this=0x8fe39d0, player=) at ../../../../../plasma/generic/dataengines/nowplaying/nowplayingengine.cpp:147
#16 0x04c27cd5 in NowPlayingEngine::qt_metacall (this=0x8fe39d0, _c=QMetaObject::InvokeMetaMethod, _id=25, _a=0xbf8d5828) at ./nowplayingengine.moc:77
#17 0x0146f8ca in QMetaObject::metacall (object=0x8fe39d0, cl=150495276, idx=25, argv=0xbf8d5828) at kernel/qmetaobject.cpp:237
#18 0x014826ad in QMetaObject::activate (sender=0x8fd97d0, m=0x4c3f68c, local_signal_index=1, argv=0x8fa42b8) at kernel/qobject.cpp:3280
#19 0x04c254f3 in DBusWatcher::playerDisappeared (this=0x8fd97d0, _t1=...) at moc_dbuswatcher.cpp:100
#20 0x04c2c8dc in DBusWatcher::serviceChange (this=0x8fd97d0, name=..., oldOwner=..., newOwner=...) at ../../../../../plasma/generic/dataengines/nowplaying/playerinterface/dbuswatcher.cpp:102
#21 0x04c256e3 in DBusWatcher::qt_metacall (this=0x8fd97d0, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0xbf8d5a00) at moc_dbuswatcher.cpp:81
#22 0x0146f8ca in QMetaObject::metacall (object=0x8fd97d0, cl=150495276, idx=6, argv=0xbf8d5a00) at kernel/qmetaobject.cpp:237
#23 0x014826ad in QMetaObject::activate (sender=0x8b2f178, m=0xb5bc88, local_signal_index=2, argv=0x8fa42b8) at kernel/qobject.cpp:3280
#24 0x00b438df in QDBusConnectionInterface::serviceOwnerChanged (this=0x8b2f178, _t1=..., _t2=..., _t3=...) at .moc/release-shared/moc_qdbusconnectioninterface.cpp:210
#25 0x00b43c03 in QDBusConnectionInterface::qt_metacall (this=0x8b2f178, _c=QMetaObject::InvokeMetaMethod, _id=2, _a=0xbf8d5bd0) at .moc/release-shared/moc_qdbusconnectioninterface.cpp:137
#26 0x0146f8ca in QMetaObject::metacall (object=0x8b2f178, cl=150495276, idx=7, argv=0xbf8d5bd0) at kernel/qmetaobject.cpp:237
#27 0x014826ad in QMetaObject::activate (sender=0x8b2f178, m=0xb5bc88, local_signal_index=6, argv=0x8fa42b8) at kernel/qobject.cpp:3280
#28 0x00b4378f in QDBusConnectionInterface::NameOwnerChanged (this=0x8b2f178, _t1=..., _t2=..., _t3=...) at .moc/release-shared/moc_qdbusconnectioninterface.cpp:238
#29 0x00b43c93 in QDBusConnectionInterface::qt_metacall (this=0x8b2f178, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0xbf8d5ddc) at .moc/release-shared/moc_qdbusconnectioninterface.cpp:141
#30 0x00b019dc in QDBusConnectionPrivate::deliverCall (this=0x8b34200, object=0x8b2f178, msg=..., metaTypes=..., slotIdx=11) at qdbusintegrator.cpp:919
#31 0x00b0d1f7 in QDBusCallDeliveryEvent::placeMetaCall (this=0x9bdd398, object=0x8b2f178) at qdbusintegrator_p.h:103
#32 0x0147c6a2 in QObject::event (this=0x8b2f178, e=0x994e5d0) at kernel/qobject.cpp:1219
#33 0x019a4fdc in QApplicationPrivate::notify_helper (this=0x8b3f530, receiver=0x8b2f178, e=0x9bdd398) at kernel/qapplication.cpp:4396
#34 0x019ab04e in QApplication::notify (this=0x8b33828, receiver=0x8b2f178, e=0x9bdd398) at kernel/qapplication.cpp:3798
#35 0x01117f7a in KApplication::notify (this=0x8b33828, receiver=0x8b2f178, event=0x9bdd398) at ../../kdeui/kernel/kapplication.cpp:311
#36 0x01469b3b in QCoreApplication::notifyInternal (this=0x8b33828, receiver=0x8b2f178, event=0x9bdd398) at kernel/qcoreapplication.cpp:732
#37 0x0146cd8b in sendEvent (receiver=0x0, event_type=0, data=0x8afc0f0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#38 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x8afc0f0) at kernel/qcoreapplication.cpp:1373
#39 0x0146cf4d in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1266
#40 0x01498a74 in sendPostedEvents (s=0x8b40f80) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#41 postEventSourceDispatch (s=0x8b40f80) at kernel/qeventdispatcher_glib.cpp:277
#42 0x0372e855 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#43 0x03732668 in ?? () from /lib/libglib-2.0.so.0
#44 0x03732848 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#45 0x01498565 in QEventDispatcherGlib::processEvents (this=0x8afbba0, flags=...) at kernel/qeventdispatcher_glib.cpp:415
#46 0x01a66be5 in QGuiEventDispatcherGlib::processEvents (this=0x8afbba0, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#47 0x01468609 in QEventLoop::processEvents (this=0xbf8d6604, flags=) at kernel/qeventloop.cpp:149
#48 0x01468a8a in QEventLoop::exec (this=0xbf8d6604, flags=...) at kernel/qeventloop.cpp:201
#49 0x0146d00f in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#50 0x019a3e07 in QApplication::exec () at kernel/qapplication.cpp:3672
#51 0x00317fd7 in kdemain (argc=1, argv=0xbf8d6814) at ../../../../plasma/desktop/shell/main.cpp:118
#52 0x080485bb in main (argc=1, argv=0xbf8d6814) at plasma-desktop_dummy.cpp:3

Reported using DrKonqi
Comment 1 Dario Andres 2011-01-29 13:16:27 UTC
[Comment from a bug triager]
The crash looks related to the Now Playing widget, if you can repeat the crash at will, install the "kdeplasma-addons-dbg" package and try to generate a new backtrace.
Thanks
Comment 2 karaluh 2011-02-01 13:18:20 UTC
(In reply to comment #1)
> [Comment from a bug triager]
> The crash looks related to the Now Playing widget, if you can repeat the crash
> at will, install the "kdeplasma-addons-dbg" package and try to generate a new
> backtrace.
> Thanks

You're right, Plasma crashes each time i quit Amarok. I have two instances of Now Playing widget, on desktop and taskbar. I installed the debug package, however crash dialog doesn't appear anymore. Would you like me to create the backtrace with gdb?
Comment 3 Aaron J. Seigo 2011-02-01 19:38:19 UTC
yes, please do.

something you can try that might make it easier is to run: plasmoidviewer nowplaying ... that should run it in a small window. then try to trigger the crash with amarok.
Comment 4 karaluh 2011-02-02 08:45:38 UTC
(In reply to comment #3)
> yes, please do.
> 
> something you can try that might make it easier is to run: plasmoidviewer
> nowplaying ... that should run it in a small window. then try to trigger the
> crash with amarok.

plasmoidviewer didn't crash. Crash dialog appeared however:

Application: Plasma Desktop Shell (plasma-desktop), signal: Segmentation fault
[Current thread is 1 (Thread 0xb787f720 (LWP 2263))]

Thread 3 (Thread 0xb5178b70 (LWP 2264)):
#0  0x00c71416 in __kernel_vsyscall ()
#1  0x001d1df6 in __poll (fds=0x268ff4, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:87
#2  0x01a35a1b in g_poll () from /lib/libglib-2.0.so.0
#3  0x01a2843c in ?? () from /lib/libglib-2.0.so.0
#4  0x01a28848 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#5  0x05a1259f in QEventDispatcherGlib::processEvents (this=0x9551e20, flags=...) at kernel/qeventdispatcher_glib.cpp:417
#6  0x059e2609 in QEventLoop::processEvents (this=0xb5178280, flags=) at kernel/qeventloop.cpp:149
#7  0x059e2a8a in QEventLoop::exec (this=0xb5178280, flags=...) at kernel/qeventloop.cpp:201
#8  0x058deb7e in QThread::exec (this=0x954c9d0) at thread/qthread.cpp:490
#9  0x059c135b in QInotifyFileSystemWatcherEngine::run (this=0x954c9d0) at io/qfilesystemwatcher_inotify.cpp:248
#10 0x058e1df9 in QThreadPrivate::start (arg=0x954c9d0) at thread/qthread_unix.cpp:266
#11 0x041f3cc9 in start_thread (arg=0xb5178b70) at pthread_create.c:304
#12 0x001e069e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 2 (Thread 0xae6b3b70 (LWP 2330)):
#0  0x00c71416 in __kernel_vsyscall ()
#1  0x041f84dc in pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/i386/i686/../i486/pthread_cond_wait.S:169
#2  0x001edd9d in __pthread_cond_wait (cond=0x1484290, mutex=0x1484278) at forward.c:139
#3  0x01380877 in QTWTF::TCMalloc_PageHeap::scavengerThread (this=0x147f1a0) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:2359
#4  0x013808c1 in QTWTF::TCMalloc_PageHeap::runScavengerThread (context=0x147f1a0) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:1464
#5  0x041f3cc9 in start_thread (arg=0xae6b3b70) at pthread_create.c:304
#6  0x001e069e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 1 (Thread 0xb787f720 (LWP 2263)):
[KCrash Handler]
#7  0x00000010 in ?? ()
#8  0x0448ede2 in NowPlaying::findPlayer (this=0x941a240) at ../../../applets/nowplaying/nowplaying.cpp:359
#9  0x0448f2d3 in NowPlaying::playerRemoved (this=0x941a240, name=...) at ../../../applets/nowplaying/nowplaying.cpp:338
#10 0x044932d5 in NowPlaying::qt_metacall (this=0x941a240, _c=QMetaObject::InvokeMetaMethod, _id=68, _a=0xbf866768) at ./nowplaying.moc:108
#11 0x059e98ca in QMetaObject::metacall (object=0x941a240, cl=155296348, idx=68, argv=0xbf866768) at kernel/qmetaobject.cpp:237
#12 0x059fc6ad in QMetaObject::activate (sender=0x94d18f8, m=0xc43b44, local_signal_index=1, argv=0x94c7ca0) at kernel/qobject.cpp:3280
#13 0x00a78e33 in Plasma::DataEngine::sourceRemoved (this=0x94d18f8, _t1=...) at ./dataengine.moc:198
#14 0x00a7ad10 in Plasma::DataEngine::removeSource (this=0x94d18f8, source=...) at ../../plasma/dataengine.cpp:324
#15 0x02bc53fc in NowPlayingEngine::removePlayer (this=0x94d18f8, player=) at ../../../../../plasma/generic/dataengines/nowplaying/nowplayingengine.cpp:147
#16 0x02bc6cd5 in NowPlayingEngine::qt_metacall (this=0x94d18f8, _c=QMetaObject::InvokeMetaMethod, _id=25, _a=0xbf8669a8) at ./nowplayingengine.moc:77
#17 0x059e98ca in QMetaObject::metacall (object=0x94d18f8, cl=155296348, idx=25, argv=0xbf8669a8) at kernel/qmetaobject.cpp:237
#18 0x059fc6ad in QMetaObject::activate (sender=0x94c6e08, m=0x2bde68c, local_signal_index=1, argv=0x94c7ca0) at kernel/qobject.cpp:3280
#19 0x02bc44f3 in DBusWatcher::playerDisappeared (this=0x94c6e08, _t1=...) at moc_dbuswatcher.cpp:100
#20 0x02bcb8dc in DBusWatcher::serviceChange (this=0x94c6e08, name=..., oldOwner=..., newOwner=...) at ../../../../../plasma/generic/dataengines/nowplaying/playerinterface/dbuswatcher.cpp:102
#21 0x02bc46e3 in DBusWatcher::qt_metacall (this=0x94c6e08, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0xbf866b80) at moc_dbuswatcher.cpp:81
#22 0x059e98ca in QMetaObject::metacall (object=0x94c6e08, cl=155296348, idx=6, argv=0xbf866b80) at kernel/qmetaobject.cpp:237
#23 0x059fc6ad in QMetaObject::activate (sender=0x9071178, m=0x3ffc88, local_signal_index=2, argv=0x94c7ca0) at kernel/qobject.cpp:3280
#24 0x003e78df in QDBusConnectionInterface::serviceOwnerChanged (this=0x9071178, _t1=..., _t2=..., _t3=...) at .moc/release-shared/moc_qdbusconnectioninterface.cpp:210
#25 0x003e7c03 in QDBusConnectionInterface::qt_metacall (this=0x9071178, _c=QMetaObject::InvokeMetaMethod, _id=2, _a=0xbf866d50) at .moc/release-shared/moc_qdbusconnectioninterface.cpp:137
#26 0x059e98ca in QMetaObject::metacall (object=0x9071178, cl=155296348, idx=7, argv=0xbf866d50) at kernel/qmetaobject.cpp:237
#27 0x059fc6ad in QMetaObject::activate (sender=0x9071178, m=0x3ffc88, local_signal_index=6, argv=0x94c7ca0) at kernel/qobject.cpp:3280
#28 0x003e778f in QDBusConnectionInterface::NameOwnerChanged (this=0x9071178, _t1=..., _t2=..., _t3=...) at .moc/release-shared/moc_qdbusconnectioninterface.cpp:238
#29 0x003e7c93 in QDBusConnectionInterface::qt_metacall (this=0x9071178, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0xbf866f5c) at .moc/release-shared/moc_qdbusconnectioninterface.cpp:141
#30 0x003a59dc in QDBusConnectionPrivate::deliverCall (this=0x90761a8, object=0x9071178, msg=..., metaTypes=..., slotIdx=11) at qdbusintegrator.cpp:919
#31 0x003b11f7 in QDBusCallDeliveryEvent::placeMetaCall (this=0xa0ec1e8, object=0x9071178) at qdbusintegrator_p.h:103
#32 0x059f66a2 in QObject::event (this=0x9071178, e=0x94dbc00) at kernel/qobject.cpp:1219
#33 0x04746fdc in QApplicationPrivate::notify_helper (this=0x9081750, receiver=0x9071178, e=0xa0ec1e8) at kernel/qapplication.cpp:4396
#34 0x0474d04e in QApplication::notify (this=0x90757d0, receiver=0x9071178, e=0xa0ec1e8) at kernel/qapplication.cpp:3798
#35 0x0100bf7a in KApplication::notify (this=0x90757d0, receiver=0x9071178, event=0xa0ec1e8) at ../../kdeui/kernel/kapplication.cpp:311
#36 0x059e3b3b in QCoreApplication::notifyInternal (this=0x90757d0, receiver=0x9071178, event=0xa0ec1e8) at kernel/qcoreapplication.cpp:732
#37 0x059e6d8b in sendEvent (receiver=0x0, event_type=0, data=0x903e0f0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#38 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x903e0f0) at kernel/qcoreapplication.cpp:1373
#39 0x059e6f4d in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1266
#40 0x05a12a74 in sendPostedEvents (s=0x90831a8) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#41 postEventSourceDispatch (s=0x90831a8) at kernel/qeventdispatcher_glib.cpp:277
#42 0x01a24855 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#43 0x01a28668 in ?? () from /lib/libglib-2.0.so.0
#44 0x01a28848 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#45 0x05a12565 in QEventDispatcherGlib::processEvents (this=0x903dba0, flags=...) at kernel/qeventdispatcher_glib.cpp:415
#46 0x04808be5 in QGuiEventDispatcherGlib::processEvents (this=0x903dba0, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#47 0x059e2609 in QEventLoop::processEvents (this=0xbf867784, flags=) at kernel/qeventloop.cpp:149
#48 0x059e2a8a in QEventLoop::exec (this=0xbf867784, flags=...) at kernel/qeventloop.cpp:201
#49 0x059e700f in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#50 0x04745e07 in QApplication::exec () at kernel/qapplication.cpp:3672
#51 0x007cbfd7 in kdemain (argc=1, argv=0xbf867994) at ../../../../plasma/desktop/shell/main.cpp:118
#52 0x080485bb in main (argc=1, argv=0xbf867994) at plasma-desktop_dummy.cpp:3
Comment 5 Aaron J. Seigo 2011-02-02 09:47:07 UTC
Git commit 8a5d6de2b4dad9310e58f29a21a5000ee96c9269 by Aaron Seigo.
Committed on 02/02/11 at 09:44.
Pushed by aseigo into branch 'KDE/4.6'.

Service objects are owned by the caller

BUG:264588

M  +5    -8    plasma/generic/dataengines/nowplaying/playercontainer.cpp     
M  +0    -1    plasma/generic/dataengines/nowplaying/playercontainer.h     

http://commits.kde.org/kde-workspace/8a5d6de2b4dad9310e58f29a21a5000ee96c9269
Comment 6 Aaron J. Seigo 2011-02-02 09:47:07 UTC
Git commit 0d0b13dab224ac103fedd7299520a52425a12395 by Aaron Seigo.
Committed on 02/02/11 at 09:44.
Pushed by aseigo into branch 'master'.

Service objects are owned by the caller

BUG:264588

M  +5    -8    plasma/generic/dataengines/nowplaying/playercontainer.cpp     
M  +0    -1    plasma/generic/dataengines/nowplaying/playercontainer.h     

http://commits.kde.org/kde-workspace/0d0b13dab224ac103fedd7299520a52425a12395
Comment 7 Aaron J. Seigo 2011-02-02 23:17:43 UTC
Git commit 46259660a6866723c277c6b0fdeea36229344d30 by Aaron Seigo.
Committed on 02/02/11 at 09:44.
Pushed by aseigo into branch 'aseigo/activityrunner'.

Service objects are owned by the caller

BUG:264588

M  +5    -8    plasma/generic/dataengines/nowplaying/playercontainer.cpp     
M  +0    -1    plasma/generic/dataengines/nowplaying/playercontainer.h     

http://commits.kde.org/kde-workspace/46259660a6866723c277c6b0fdeea36229344d30
Comment 8 Dario Andres 2011-02-11 17:49:43 UTC
*** Bug 265804 has been marked as a duplicate of this bug. ***
Comment 9 Dario Andres 2011-05-12 01:01:01 UTC
*** Bug 273054 has been marked as a duplicate of this bug. ***
Comment 10 Dario Andres 2011-07-23 13:47:33 UTC
*** Bug 277761 has been marked as a duplicate of this bug. ***