Service objects are owned by the caller

BUG:264588